--- a/applications/training-api/src/main/resources/application.conf
+++ b/applications/training-api/src/main/resources/application.conf
@@ -2,3 +2,11 @@ server {
   host = "0.0.0.0"
   port = 8080
 }
+
+database {
+  driver = "org.h2.Driver"
+  url = "jdbc:h2:mem:simplebank;MODE=PostgreSQL;DB_CLOSE_DELAY=-1"
+  user = "sa"
+  password = ""
+  thread-pool-size = 32
+}
